[package]
name = "tracelog"
version = "0.1.0"
description = "trace and log"
authors = ["Kanudo <kanudo@ikanudo.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tracelog"
repository = "https://github.com/kanudo/tracelog"
keywords = ["tracelog", "logging", "backtrace"]
edition = "2018"

[dependencies]
backtrace = "0.3"